fixed button issue and spacing issue on homepage

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise);
 
 html {
-  position: relative;
+
 }
 
 /*homepage*/
@@ -157,7 +157,6 @@ a:hover {
 /*the question pages*/
 
 form {
-  height: 600px;
 }
 
 #nycskyline{
@@ -166,8 +165,8 @@ form {
   z-index: -1;
   margin-bottom: 0;
   bottom:0;
-  position: fixed;
   left: 0;
+  position: fixed;
 }
 
 .blurb{
@@ -185,7 +184,7 @@ form {
     display: inline-block;
     color: cornflowerblue;
 }
-
+/*
 #food_type_list {
   -webkit-column-count: 2;
   column-count: 2;
@@ -193,6 +192,13 @@ form {
   column-gap: 10px;
   margin-left: 30%;
   margin-right: 30%;
+}
+*/
+
+#column1, #column2 {
+  display: inline-block;
+  vertical-align: top;
+  width: 300px;
 }
 
 .button {
@@ -243,7 +249,7 @@ div.developer_paragraphs {
 }
 
 p.bio {
-  width: 10px;
+  width: 100%;
 }
 
 /*reference page*/
